...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="I Agree, Continue">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Got it!">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Tutorial" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fuF-Ca-3p8">
                                                    <rect key="frame" x="8" y="11" width="99" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sugguest a Feature" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IvB-Ot-74d">
                                                    <rect key="frame" x="8" y="11" width="149" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Report a Bug" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Cd-hR-aDb">
                                                    <rect key="frame" x="8" y="11" width="100" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iBV-dg-sj6">
                                                    <rect key="frame" x="8" y="11" width="63" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Send" id="58T-hi-EIj">
                            <connections>
                                <action selector="done:" destination="n3z-dH-NFx" id="c7p-fg-PQU"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGA-Gq-kzX">
                                <rect key="frame" x="110" y="185" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" identifier="shake icon"/>
                                <gestureRecognizers/>
                                <constraints>
...
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
                        <outlet property="help" destination="JpO-Qd-zFx" id="BHd-5p-m8E"/>
                        <outlet property="progressBar" destination="rQ4-Hc-fec" id="bOG-HM-6lD"/>
                        <outlet property="progressLabel" destination="4j7-iG-I5K" id="7s5-BZ-5hg"/>
                        <outlet property="settings" destination="epi-yX-hjt" id="3Yz-Il-9sI"/>
                        <outlet property="shake" destination="YGA-Gq-kzX" id="bGL-rn-agD"/>
                        <outlet property="shakeDesc" destination="kbx-8F-CS3" id="cYa-J9-q9U"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wQU-3l-7vX">
                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                        <accessibility key="accessibilityConfiguration" identifier="speed-dial"/>
                                        <state key="normal">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
...
                                </constraints>
                                <items>
                                    <navigationItem title="Settings" id="dGK-If-k6R">
                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Vxz-TK-U5z">
                                            <connections>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First and Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NFk-ki-aus">
                                                    <rect key="frame" x="95" y="6" width="217" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" label="full_name"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" enablesReturnKeyAutomatically="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gnm-ii-JlE">
                                                    <rect key="frame" x="8" y="11" width="19" height="21"/>
                                                    <constraints>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
