...
    
    :param: title
    :param: message
    */
    func displayAlertView(title: String, message: String) {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .Alert)
        let OKAction = UIAlertAction(title: "OK", style: .Default) { (action) in
            
        }
        alertController.addAction(OKAction)
        
        self.presentViewController(alertController, animated: true) {
            
...
    
    @IBAction func resetPasscode(sender: UIButton) {
        let errorString = saveSettings()
        if (errorString == "") {
            self.performSegueWithIdentifier("settingsToSetPasscodeSegue", sender: self)
        } else {
            displayAlertView("Oops!", message: errorString)
        }
    }
    
    @IBAction func callAddressBook(sender: UIButton) {
        let contactSearchVC = self.storyboard?.instantiateViewControllerWithIdentifier("ContactSearchViewController") as! ContactSearchViewController
        contactSearchVC.setCompletion({ selectedNumber in
...
